# hs_leader

./: README.md  build_run.sh  memory_check.sh  readme.txt  release.sh
src/: CMakeLists.txt  HSAlgo.cc  HSAlgo.h  main.cc  makefile
src/utils/: log_util.h  message.h  message_channel.h
test/: result.txt  test.txt
